lowered indicator border-slice value to fix the new invisible border issue caused by the latest ChatGPT update - and made the colors fully opaque for now

--- a/StretchGPT.userstyle.css
+++ b/StretchGPT.userstyle.css
@@ -87,7 +87,7 @@
 
 		/* Add colored left border to User messages when "enableColorIndicators" is on */
 		& when(@enableColorIndicators = 1) {
-			@gc-1: fade(@indicatorColor, 95%);
+			@gc-1: @indicatorColor;
 			@gc-2: if(
 				saturation(@indicatorColor) > 50%,
 				if(lightness(@indicatorColor) < 20%,
@@ -96,8 +96,8 @@
 				),
 				saturate(@indicatorColor, 20%)
 			);
-			border-image-source: repeating-linear-gradient(30deg, @gc-1 30%, fade(@gc-2, 95%) 60%, @gc-1 95%);
-			border-image-slice: 40;
+			border-image-source: repeating-linear-gradient(30deg, @gc-1 30%, @gc-2, 60%, @gc-1 95%);
+			border-image-slice: 30;
 			border-bottom: 0;
 			border-left-width: 8px;
 
